# qaguru_17_19_1

./: .env  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
tests/: conftest.py
tests/android/: conftest.py  test_wiki_in_browserstack.py
tests/android/app/: conftest.py  test_wiki.py
tests/android/web/: test_wiki.py
tests/web/: conftest.py  test_wiki_in_local.py
utils/: allure_attach.py
